# aiodispatcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/aiodispatcher/: __init__.py
tests/: conftest.py
tests/integration/: test_dispatch_flow.py
tests/unit/: test_add_listener.py  test_dispatch.py  test_get_listeners.py  test_has_listeners.py  test_listen_decorator.py  test_remove_listener.py
