[project]
name = "aiodispatcher"
version = "0.1.0"
description = "A lightweight Python library for concurrent async event dispatching"
readme = "README.md"
authors = [
    { name = "Matěj Bartoň", email = "matej.barton@techlib.cz" }
]
keywords = ["async", "asyncio", "event", "dispatcher", "concurrent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/mjvbarton/aiodispatcher"
Repository = "https://github.com/mjvbarton/aiodispatcher"
Issues = "https://github.com/mjvbarton/aiodispatcher/issues"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "UP",   # pyupgrade
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
python-version = "3.14"

[tool.ty.rules]
possibly-unbound = "error"
missing-argument = "error"
unknown-argument = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
